--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile "com.github.isyscore:common-swing:1.6.0"
     compile "org.apache.commons:commons-text:1.9"
     compile "mysql:mysql-connector-java:8.0.15"
+    compile 'org.xerial:sqlite-jdbc:3.34.0'
 }
 
 mainClassName = 'com.rarnu.kana.MainKt'
